actualizacion de datos

--- a/index.html
+++ b/index.html
@@ -204,8 +204,9 @@
                     </table>
         
 </section>
-<section id="cronograma" class="side-images">
-        <img src="img/cronograma.png" alt="Cronograma de Actividades" width="100%">
+<section id="cronograma"  class="content-section">
+        <img src="img/cronograma.png" alt="Cronograma de Actividades" width="100%" class=" #cronograma img">
+ 
 </section>
 <section id="presupuesto" class="content-section">
     <h2>Presupuesto</h2>
