--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             <td>Abril</td>
                             <td>Semana 3</td>
                             <td>Iniciador</td>
-                            <td>150g</td>
+                            <td>200g</td>
                             <td>21%</td>
                             <td>3</td>
                             <td>Mañana, Tarde, Noche</td>
@@ -97,7 +97,7 @@
                             <td>Abril</td>
                             <td>Semana 4</td>
                             <td>Iniciador</td>
-                            <td>160g</td>
+                            <td>480g</td>
                             <td>21%</td>
                             <td>3</td>
                             <td>Mañana, Tarde, Noche</td>
@@ -106,7 +106,7 @@
                             <td>Mayo</td>
                             <td>Semana 1</td>
                             <td>Iniciador</td>
-                            <td>180g</td>
+                            <td>730g</td>
                             <td>21%</td>
                             <td>3</td>
                             <td>Mañana, Tarde, Noche</td>
@@ -115,7 +115,7 @@
                             <td>Mayo</td>
                             <td>Semana 2</td>
                             <td>Engorde</td>
-                            <td>190g</td>
+                            <td>1200g</td>
                             <td>21%</td>
                             <td>3</td>
                             <td>Mañana, Tarde, Noche</td>
@@ -124,7 +124,7 @@
                         <td>Mayo</td>
                         <td>Semana 3</td>
                         <td>Engorde/ Yuca cocinada y picada</td>
-                        <td>200g</td>
+                        <td>2000g</td>
                         <td>21%</td>
                         <td>3</td>
                         <td>Mañana, Tarde, Noche</td>
@@ -133,7 +133,7 @@
                         <td>Mayo</td>
                         <td>Semana 4</td>
                         <td>Engorde/ Yuca cocinada y picada</td>
-                        <td>210g</td>
+                        <td>2700g</td>
                         <td>21%</td>
                         <td>3</td>
                         <td>Mañana, Tarde, Noche</td>
@@ -146,7 +146,7 @@
                         <td>Junio</td>
                         <td>Semana 3</td>
                         <td>Iniciador</td>
-                        <td>150g</td>
+                        <td>200g</td>
                         <td>21%</td>
                         <td>3</td>
                         <td>Mañana, Tarde, Noche</td>
@@ -155,7 +155,7 @@
                         <td>Junio</td>
                         <td>Semana 4</td>
                         <td>Iniciador</td>
-                        <td>160g</td>
+                        <td>480g</td>
                         <td>21%</td>
                         <td>3</td>
                         <td>Mañana, Tarde, Noche</td>
@@ -164,7 +164,7 @@
                         <td>Julio</td>
                         <td>Semana 1</td>
                         <td>Iniciador</td>
-                        <td>180g</td>
+                        <td>730g</td>
                         <td>21%</td>
                         <td>3</td>
                         <td>Mañana, Tarde, Noche</td>
@@ -173,7 +173,7 @@
                         <td>Julio</td>
                         <td>Semana 2</td>
                         <td>Engorde</td>
-                        <td>190g</td>
+                        <td>1200g</td>
                         <td>21%</td>
                         <td>3</td>
                         <td>Mañana, Tarde, Noche</td>
@@ -182,7 +182,7 @@
                     <td>Julio</td>
                     <td>Semana 3</td>
                     <td>Engorde & Cuchuco</td>
-                    <td>200g</td>
+                    <td>2000g</td>
                     <td>21%</td>
                     <td>3</td>
                     <td>Mañana, Tarde, Noche</td>
@@ -191,10 +191,11 @@
                     <td>Julio</td>
                     <td>Semana 4</td>
                     <td>Engorde & Cuchuco</td>
-                    <td>210g</td>
+                    <td>2700g</td>
                     <td>21%</td>
                     <td>3</td>
                     <td>Mañana, Tarde, Noche</td>
+                </tr>
                     <tr class="full-width">
                         <td colspan="7">Tercera Compra de Pollos</td>
                     </tr>
@@ -203,7 +204,7 @@
                     <td>Julio</td>
                     <td>Semana 4</td>
                     <td>Iniciador</td>
-                    <td>150g</td>
+                    <td>200g</td>
                     <td>21%</td>
                     <td>3</td>
                     <td>Mañana, Tarde, Noche</td>
@@ -212,7 +213,7 @@
                     <td>Agosto</td>
                     <td>Semana 1</td>
                     <td>Iniciador</td>
-                    <td>160g</td>
+                    <td>480g</td>
                     <td>21%</td>
                     <td>3</td>
                     <td>Mañana, Tarde, Noche</td>
@@ -221,7 +222,7 @@
                     <td>Agosto</td>
                     <td>Semana 2</td>
                     <td>Iniciador</td>
-                    <td>180g</td>
+                    <td>730g</td>
                     <td>21%</td>
                     <td>3</td>
                     <td>Mañana, Tarde, Noche</td>
@@ -230,7 +231,7 @@
                     <td>Agosto</td>
                     <td>Semana 3</td>
                     <td>Engorde</td>
-                    <td>190g</td>
+                    <td>1200g</td>
                     <td>21%</td>
                     <td>3</td>
                     <td>Mañana, Tarde, Noche</td>
@@ -239,7 +240,7 @@
                 <td>Agosto</td>
                 <td>Semana 4</td>
                 <td>Engorde & Rumiante</td>
-                <td>200g</td>
+                <td>2000g</td>
                 <td>21%</td>
                 <td>3</td>
                 <td>Mañana, Tarde, Noche</td>
@@ -248,7 +249,7 @@
                 <td>Septiembre</td>
                 <td>Semana 1</td>
                 <td>Engorde & Rumiante</td>
-                <td>210g</td>
+                <td>2700g</td>
                 <td>21%</td>
                 <td>3</td>
                 <td>Mañana, Tarde, Noche</td>
@@ -309,14 +310,14 @@ document.addEventListener('keydown', function(event) {
         <div class="footer-subtext">Los pollos criados con amor y cuidado se convierten en un tesoro a la hora de consumir</div>
         <div class="footer-subtext">Innovadora y Estudiante a cargo del proyecto Valentina Niño</div>
     </div>
-    <!-- Aquí agregamos el reCAPTCHA -->
-    <div class="footer-recaptcha">
-        <div class="g-recaptcha" data-sitekey="TU-SITE-KEY"></div>
-    </div>
+  <!-- ReCAPTCHA -->
+  <div class="recaptcha-secure">
+    <img src="https://www.gstatic.com/recaptcha/api2/logo_48.png" alt="Asegurado con reCAPTCHA">
+    <span>Asegurado con reCAPTCHA</span>
 </footer>
 <!-- Franja pequeña con el mensaje de exalumno -->
 <div class="footer-small">
-    © Micrositio Web elaborado con dedicacion con base al proyecto de Grado - Producción de Pollos Semicriollos
+    © Micrositio Web elaborado con base al proyecto de Grado - Producción de Pollos Semicriollos
     <p> Utlizando metodos sostenibles, el cual queda en el colegio como guia para las nuevas Generaciones. </p>
 </div>
 <script>
